docs(fluss): document Java 17+ JVM options for Apache Arrow